--- a/public/index.html
+++ b/public/index.html
@@ -169,10 +169,10 @@
 
     <!-- D3 -->
     <script src="https://d3js.org/d3.v5.min.js"></script>
-    <!--     <script
+    <script
       type="text/javascript"
       src="https://unpkg.com/force-in-a-box/dist/forceInABox.js"
-    ></script> -->
+    ></script>
 
     <!-- Deepcopy helper library -->
     <script
