--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
   <!-- D3 -->
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script type="text/javascript" src="https://unpkg.com/force-in-a-box/dist/forceInABox.js"></script>
+  <script src="https://d3js.org/d3-ease.v1.min.js"></script>
 
   <!-- Deepcopy helper library -->
   <script defer src="https://cdn.jsdelivr.net/npm/deepcopy@2.0.0/umd/deepcopy.min.js"></script>
